examples/nextjs-commerce/packages/spree/dist/errors/MisconfigurationError.js
class MisconfigurationError extends Error {
}
export { MisconfigurationError as default };
